--- a/payroll.html
+++ b/payroll.html
@@ -140,11 +140,11 @@
                 <h1 class="welcome-text">Pay<span>roll</span></h1>
             </div>
             <div class="header-btns">
-                <button class="lang-dropdown" id="directionToggle">
+                <button class="lang-dropdown">
                     <span id="lang">Lang ▼</span>
                     <div class="lang-dropdown-content">
-                        <p>English</p>
-                        <p>Arabic</p>
+                        <p id="directionLtr">English</p>
+                        <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
                 <button><a href=""><i class='bx bx-notification'></i></a></button>
