--- a/tickets.html
+++ b/tickets.html
@@ -18,7 +18,7 @@
 
     <!-- Desktop Side Bar -->
 
-    <div class="maxsidebar">
+    <div class="maxsidebar" id="maxsidebar">
         <div class="logo-details">
             <i class='bx bx-menu' id="btn"></i>
         </div>
@@ -78,7 +78,7 @@
                 </a>
                 <span class="tooltip">Tickets</span>
             </li>
-            <li class="profile">
+            <li class="profile" id="maxSidebarlogout">
 
                 <a href="#">
                     <i class='bx bx-log-out' id="log_out"></i>
@@ -132,17 +132,25 @@
 
     <!-- Dashboard -->
 
-    <section class="dashboard-section">
+    <section class="dashboard-section" id="dashboard-section">
 
         <header>
             <div>
-                <h1 class="welcome-text">Tick<span>ets</span></h1>
+                <h1 class="welcome-text">Pay<span>roll</span></h1>
             </div>
             <div class="header-btns">
-                <a href=""><i class='bx bx-notification'></i></a>
-                <a href=""><i class='bx bx-user-circle'></i></a>
+                <button class="lang-dropdown">
+                    <span id="lang">Lang ▼</span>
+                    <div class="lang-dropdown-content">
+                        <p id="directionLtr">English</p>
+                        <p id="directionRlt">Arabic</p>
+                    </div>
+                </button>
+                <button><a href=""><i class='bx bx-notification'></i></a></button>
+                <button><a href=""><i class='bx bx-user-circle'></i></a></button>
             </div>
         </header>
+
 
     </section>
 
