--- a/reimbursement.html
+++ b/reimbursement.html
@@ -144,8 +144,8 @@
                 <button class="lang-dropdown" id="directionToggle">
                     <span id="lang">Lang ▼</span>
                     <div class="lang-dropdown-content">
-                        <p>English</p>
-                        <p>Arabic</p>
+                        <p id="directionLtr">English</p>
+                        <p id="directionRlt">Arabic</p>
                     </div>
                 </button>
                 <button><a href=""><i class='bx bx-notification'></i></a></button>
