--- a/profile.html
+++ b/profile.html
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="mt-3 per-details d-lg-flex">
-                    <div class="col-5">
+                    <div class="col-lg-5">
                         <label for="">Employee Name </label> <br>
                         <input type="text" value="Mr. Keny Kayal"><br>
                         <label for="">Employee Id</label> <br>
@@ -188,7 +188,7 @@
                         <label for="">Gender</label> <br>
                         <input type="text" value="Male">
                     </div>
-                    <div class="col-5">
+                    <div class="col-lg-5">
                         <label for="">Date of Birth</label><br>
                         <input type="text" value="02/05/1995"><br>
                         <label for="">Marital Status</label><br>
